--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Sphinx documentation
 docs/_build
 docs/auto_examples/
+docs/auto_paper/
 docs/modules/generated/
 docs/datasets/generated/
 docs/generated/
@@ -15,3 +16,6 @@ venv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 transfreq/__pycache__
+
+# Downloaded data
+transfreq_data/
