--- a/examples_paper/requirements.txt
+++ b/examples_paper/requirements.txt
@@ -1,13 +1,10 @@
+autoreject==0.2.2
 matplotlib==3.1.3
 mne==0.22.0
 mne-bids==0.7
 numpy==1.18.1
 openneuro-py==2021.10.1
 pandas==1.0.1
-PyQt5==5.12.3
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-PyQtWebEngine==5.12.1
 sklearn==0.0
 scipy==1.4.1
 visbrain==0.4.5
