--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,3 +18,23 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+install:
+	rm -rf _build/doctrees _build/transfreq.github.io
+	# first clone the neuropycon/ephypype.github.io repo because it may ask
+	# for password and we don't want to delay this long build in
+	# the middle of it
+	# --no-checkout just fetches the root folder without content
+	# --depth 1 is a speed optimization since we don't need the
+	# history prior to the last commit
+	# -b gh-pages fetches only the branch for the gh-pages
+	git clone -b gh-pages --single-branch --no-checkout --depth 1 git@github.com:elisabettavallarino/transfreq.git _build/transfreq.github.io
+	touch _build/transfreq.github.io/.nojekyll
+	make html
+	cd _build/ && \
+	cp -r html/* transfreq.github.io && \
+	cd transfreq.github.io && \
+	git add * && \
+	git add .nojekyll && \
+	git commit -a -m 'Make install' && \
+	git push
